--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ejs": "^2.5.5",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
-    "promise-polyfill": "^6.0.2"
+    "promise-polyfill": "^6.0.2",
+    "smoothscroll-polyfill": "^0.3.5"
   }
 }
