--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "gulp",
     "dev": "gulp dev",
     "build": "gulp production",
+    "deploy": "gulp deploy",
     "test": "echo \"Error: no test specified\""
   },
   "author": "Nebo#15",
