--- a/package.json
+++ b/package.json
@@ -27,15 +27,19 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "cssnano": "^3.8.2",
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-connect": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-jekyll": "0.0.0",
     "gulp-postcss": "^6.2.0",
     "gulp-prefix": "0.0.15",
     "gulp-rename": "^1.2.2",
+    "gulp-sequence": "^0.4.6",
     "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
