--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ejs": "^2.5.5",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
+    "leaflet": "^1.0.3",
     "promise-polyfill": "^6.0.2",
     "smoothscroll-polyfill": "^0.3.5"
   }
