--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,14 @@ title: Національна служба здоров'я
 description: Офіційний сайт державного підприємства "Національна служба здоров'я"
 lang: uk_UA
 timezone: UTC
+clarificationTypes:
+  - "Всім"
+  - "Розробникам"
+  - "Закладам"
+  - "Лікарям"
+  - "Пацієнтам"
+  - "Аптекам"
+  - "Діагностичним центрам"
 collections:
   clarifications:
     title: Clarifications
