--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Nebo#15",
   "license": "ISC",
   "devDependencies": {
+    "async": "^2.5.0",
     "autoprefixer": "^6.5.3",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.24.1",
@@ -20,20 +21,25 @@
     "babel-plugin-module-resolver": "^2.4.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.22.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
     "babel-register": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
     "cssnano": "^3.8.2",
     "del": "^2.2.2",
+    "envify": "^4.1.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-buffer": "0.0.2",
     "gulp-connect": "^5.0.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-htmlmin": "^3.0.0",
     "gulp-jekyll": "0.0.0",
+    "gulp-notify": "^3.0.0",
     "gulp-postcss": "^6.2.0",
     "gulp-prefix": "0.0.15",
     "gulp-rename": "^1.2.2",
@@ -43,13 +49,20 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "reactify": "^1.1.1",
+    "uglifyify": "^4.0.3",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.9.0"
   },
   "dependencies": {
     "ejs": "^2.5.5",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
     "promise-polyfill": "^6.0.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-google-maps": "^7.2.0",
+    "react-lite": "^0.15.37",
     "smoothscroll-polyfill": "^0.3.5"
   }
 }
