UPdate to use webpack. Fetch to divisions

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NHS Portal Landing",
   "main": "index.js",
   "scripts": {
+    "webpack": "webpack",
     "gulp": "gulp",
     "dev": "gulp dev",
     "build": "gulp production",
@@ -17,6 +18,7 @@
     "autoprefixer": "^6.5.3",
     "babel-cli": "^6.22.2",
     "babel-core": "^6.24.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^2.4.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -31,7 +33,9 @@
     "browserify": "^13.1.1",
     "cssnano": "^3.8.2",
     "del": "^2.2.2",
+    "dotenv": "^4.0.0",
     "envify": "^4.1.0",
+    "extract-text-webpack-plugin": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-buffer": "0.0.2",
@@ -46,18 +50,23 @@
     "gulp-sequence": "^0.4.6",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.8",
+    "gulp-webpack": "^1.5.0",
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.3",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.9.0"
+    "watchify": "^3.9.0",
+    "webpack": "^3.4.1",
+    "webpack-merge": "^4.1.0"
   },
   "dependencies": {
     "ejs": "^2.5.5",
-    "es6-promise": "^4.0.5",
+    "es6-promise": "^4.1.1",
     "express": "^4.14.1",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
     "promise-polyfill": "^6.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
