--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "ejs": "^2.5.5",
     "es6-promise": "^4.1.1",
     "express": "^4.14.1",
