Show a list of items

--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,7 @@
         "root": ["./"]
       }
     ],
+    ["transform-decorators-legacy"],
     ["transform-class-properties"],
     ["transform-object-rest-spread"],
     ["add-module-exports"]
