--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-cli": "^6.22.2",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.1.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^2.4.0",
     "babel-plugin-transform-class-properties": "^6.22.0",
@@ -54,6 +55,7 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
+    "react-router": "^2.8.1",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.3",
     "vinyl-source-stream": "^1.1.0",
