--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "es2016", "es2017"],
+  "presets": ["es2015", "es2016", "es2017", "react"],
   "plugins": [
     [
       "module-resolver",
@@ -7,6 +7,7 @@
         "root": ["./"]
       }
     ],
+    ["transform-decorators-legacy"],
     ["transform-class-properties"],
     ["transform-object-rest-spread"],
     ["add-module-exports"]
