--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
+    "chart.js": "^2.6.0",
     "ejs": "^2.5.5",
     "es6-promise": "^4.0.5",
     "express": "^4.14.1",
