--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
+    "aos": "^2.2.0",
     "chart.js": "^2.6.0",
+    "classnames": "^2.2.5",
     "ejs": "^2.5.5",
     "es6-promise": "^4.1.1",
     "express": "^4.14.1",
