Update img and fb description

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 ---
 title: Національна служба здоров'я
-description: Офіційний сайт державного підприємства "Національна служба здоров'я"
+description: Офіційний сайт електронної системи охорони здоров'я eHealth
 lang: uk_UA
 timezone: UTC
 clarificationTypes:
