--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ---
-title: Національна служба здоров'я
+title: Офіційний сайт електронної системи здоров'я E-Health
 description: Офіційний сайт електронної системи охорони здоров'я eHealth
 lang: uk_UA
 timezone: UTC
