--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
+    "react-dom": "^16.0.0",
     "react-router": "^2.8.1",
     "reactify": "^1.1.1",
     "uglifyify": "^4.0.3",
