--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^16.0.0",
     "react-router": "^2.8.1",
     "reactify": "^1.1.1",
+    "recharts": "^1.0.0-beta.1",
     "uglifyify": "^4.0.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0",
