--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "postcss-custom-properties": "^5.0.1",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0",
+    "react-dom": "^16.0.0",
     "react-router": "^2.8.1",
     "reactify": "^1.1.1",
+    "recharts": "^1.0.0-beta.1",
     "uglifyify": "^4.0.3",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0",
@@ -75,10 +77,8 @@
     "express": "^4.14.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "preact": "^8.2.1",
+    "nuka-carousel": "^3.0.0",
     "promise-polyfill": "^6.0.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "react-google-maps": "^7.2.0",
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroller": "^1.0.14",
