--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,11 @@
 {
   "presets": ["es2015", "es2016", "es2017", "react"],
   "plugins": [
-    [
-      "module-resolver",
-      {
-        "root": ["./"]
-      }
-    ],
+    ["module-resolver", { "root": ["./"] }],
     ["transform-decorators-legacy"],
     ["transform-class-properties"],
     ["transform-object-rest-spread"],
-    ["add-module-exports"]
+    ["add-module-exports"],
+    ["transform-runtime", { "polyfill": false }]
   ]
 }
