--- a/.travis.yml
+++ b/.travis.yml
@@ -36,5 +36,5 @@ script:
   --details --since 5h; exit 1; fi;
 - sleep 5
 - ./bin/ci/push.sh 
-#- openssl aes-256-cbc -K $encrypted_2bd61e9ad530_key -iv $encrypted_2bd61e9ad530_iv -in eHealth-8110bd102a69.json.enc -out eHealth-8110bd102a69.json -d
-#- sudo ./bin/deploy.sh || travis_terminate 1
+- openssl aes-256-cbc -K $encrypted_2bd61e9ad530_key -iv $encrypted_2bd61e9ad530_iv -in eHealth-8110bd102a69.json.enc -out eHealth-8110bd102a69.json -d
+- sudo ./bin/deploy.sh || travis_terminate 1
