--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "chart.js": "2.7.0",
     "choices.js": "3.0.2",
     "classnames": "^2.2.5",
+    "downshift": "^1.22.5",
     "ejs": "^2.5.5",
     "es6-promise": "^4.1.1",
     "express": "^4.14.1",
