--- a/package.json
+++ b/package.json
@@ -60,8 +60,6 @@
     "postcss-import": "^9.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-nested": "^1.0.0",
-    "react-dom": "^16.0.0",
-    "react-router": "^2.8.1",
     "reactify": "^1.1.1",
     "recharts": "^1.0.0-beta.1",
     "uglifyify": "^4.0.3",
@@ -76,6 +74,7 @@
     "chart.js": "2.7.0",
     "choices.js": "3.0.2",
     "classnames": "^2.2.5",
+    "downshift": "^1.22.5",
     "ejs": "^2.5.5",
     "es6-promise": "^4.1.1",
     "express": "^4.14.1",
