--- a/package.json
+++ b/package.json
@@ -82,12 +82,13 @@
     "lodash": "^4.17.4",
     "nuka-carousel": "^3.0.0",
     "promise-polyfill": "^6.0.2",
-    "react-google-maps": "^7.2.0",
+    "react-google-maps": "^9.4.5",
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroller": "^1.0.14",
     "react-lite": "^0.15.37",
     "react-projector": "^1.0.0-beta.1",
     "react-projector-responsive": "^1.0.0-beta.1",
+    "recompose": "^0.26.0",
     "resize-observer-polyfill": "^1.5.0",
     "smart-plurals": "^1.1.0",
     "smoothscroll-polyfill": "^0.3.5"
