Content changes. Add tooltip component

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ collections:
     permalink: /:collection/:name/
   documents:
     output: false
+excerpt_separator: <!--more-->
 defaults:
 - scope:
     path: ''
