--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-infinite-scroll": "^0.1.5",
     "react-infinite-scroller": "^1.0.14",
     "react-lite": "^0.15.37",
+    "react-portal-tooltip": "^2.4.0",
     "react-projector": "^1.0.0-beta.1",
     "react-projector-responsive": "^1.0.0-beta.1",
     "recompose": "^0.26.0",
